Tue Apr 17 13:17:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2768_Regression/server.cpp:
          Use orb->run

        * tao/LocateRequest_Invocation.h:
          Use public inheritance

        * tao/LocateRequest_Invocation_Adapter.{h,cpp}:
          Fixed handling of a location forward. This fixes bugzilla
          2768. Thanks to Markus Henschel <m dot henschel at bally-wulff dot de>
          for reporting this problem

Tue Apr 17 13:05:52 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/ImplRepo/run_test.pl:

          Added a missing kill of the ImplRepo_Service for the airplane_ir
          test when the ImR_Activator fails to start.

Tue Apr 17 12:09:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2768_Regression/*:
          New regression which is failing at this moment, thanks to
          Markus Henschel <m dot henschel at bally-wulff dot de> for making this
          regression.

        * tests/Big_Oneways/run_test.pl:
          Corrected these scripts for VxWorks cross host testing

Tue Apr 17 12:01:56 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/Event_Service/Event_Service.cpp:

          Added an option, -a, to use the thread-per-consumer dispatching
          strategy instead of the default dispatching strategy.

        * orbsvcs/ImplRepo_Service/Activator_Options.h:
        * orbsvcs/ImplRepo_Service/Activator_Options.cpp:
        * orbsvcs/ImplRepo_Service/ImR_Activator_i.h:
        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:

          Added a new option, -e, to the ImR_Activator to set the
          environment buffer length for activated servants.  The default
          value, 16kb, is based on the ACE_Process_Options default value.

        * orbsvcs/tests/ImplRepo/run_test.pl:

          Added a usage of the -e option.

Tue Apr 17 08:16:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>
